--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,6 +195,24 @@ img {
     white-space: nowrap;
 }
 
+
+.connect {
+
+    display: block;
+    width: 100%;
+    height: 60px;
+    margin-top: 3%;
+
+
+}
+
+.connect1 {
+
+    float: left;
+    margin-left:15%;
+
+}
+
 @media (max-width: 991px) {
     .table-responsive-02 table, .table-responsive-02 thead,
     .table-responsive-02 tbody, .table-responsive-02 th, .table-responsive-02 td,
