--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,7 +201,7 @@ img {
     display: block;
     width: 100%;
     height: 60px;
-    margin-top: 3%;
+    
 
 
 }
@@ -210,7 +210,8 @@ img {
 
     float: left;
     margin-left:15%;
-
+    margin-top: 2%;
+    margin-bottom: 5%;
 }
 
 @media (max-width: 991px) {
@@ -2547,6 +2548,8 @@ ul {
 
 .bg-gray {
     background-color: #fbfbfb;
+}
+
 }
 
 /* 25. Margin Padding
